Fix alignment issues with microphone input

--- a/Application/src/settings.css
+++ b/Application/src/settings.css
@@ -39,7 +39,7 @@
     display: none;
     position: absolute;
     z-index: 1;
-    min-width: 100%;
+    width: 100%;
     background-color: #4c4c4c;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
